--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -20,7 +20,7 @@ jobs:
       - run: echo "$GITHUB_CONTEXT"
         env:
           GITHUB_CONTEXT: ${{ toJson(github) }}
-
+          
   tag_version:
     needs: test
     if: ${{ github.ref_type == 'branch' && github.ref_name != 'master' }}
@@ -43,26 +43,26 @@ jobs:
         run: |
           echo "### Release Info :rocket:" >> $GITHUB_STEP_SUMMARY
           echo "Version: ${{ steps.version.outputs.next }}" >> $GITHUB_STEP_SUMMARY
-      - name: Create tag
-        uses: actions/github-script@v6
-        env:
-          TAG_NAME: v${{ steps.version.outputs.next }}
-        with:
-          script: |
-            const { TAG_NAME } = process.env
-            github.rest.git.createRef({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              ref: `refs/tags/${TAG_NAME}`,
-              sha: context.sha
-            })
+      # - name: Create tag
+      #   uses: actions/github-script@v6
+      #   env:
+      #     TAG_NAME: v${{ steps.version.outputs.next }}
+      #   with:
+      #     script: |
+      #       const { TAG_NAME } = process.env
+      #       github.rest.git.createRef({
+      #         owner: context.repo.owner,
+      #         repo: context.repo.repo,
+      #         ref: `refs/tags/${TAG_NAME}`,
+      #         sha: context.sha
+      #       })
 
-  build_and_release:
-    uses:
-      ./.github/workflows/release.yml
-    needs: tag_version
-    with:
-      version: ${{ needs.tag_version.outputs.version }}
-      tag: ${{ needs.tag_version.outputs.tag }}
-    secrets: inherit
+  # build_and_release:
+  #   uses:
+  #     ./.github/workflows/release.yml
+  #   needs: tag_version
+  #   with:
+  #     version: ${{ needs.tag_version.outputs.version }}
+  #     tag: ${{ needs.tag_version.outputs.tag }}
+  #   secrets: inherit
 
