--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -45,6 +45,7 @@ jobs:
         id: version
         run: |
           echo "next=$(go run ./tools/version next)" >> "$GITHUB_OUTPUT"
+      - run: echo "${{ join(steps.version.outputs.*, '\n') }}"
       - name: Print version number
         run: |
           echo "### Release Info :rocket:" >> $GITHUB_STEP_SUMMARY
