--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -11,11 +11,8 @@ concurrency:
     
 jobs:
   test:
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo hello
-    # uses:
-    #   ./.github/workflows/test.yml
+    uses:
+      ./.github/workflows/test.yml
   
   debug:
     runs-on: ubuntu-latest
@@ -38,39 +35,34 @@ jobs:
       - uses: actions/setup-go@v4
         with:
           go-version-file: "go.mod"
-      - name: print
-        run: |
-          echo $(go run ./tools/version next)
       - name: Get version number
         id: version
         run: |
           echo "next=$(go run ./tools/version next)" >> "$GITHUB_OUTPUT"
-          echo $GITHUB_OUTPUT
-      - run: echo "${{ steps.version.outputs.next }}"
       - name: Print version number
         run: |
           echo "### Release Info :rocket:" >> $GITHUB_STEP_SUMMARY
           echo "Version: ${{ steps.version.outputs.next }}" >> $GITHUB_STEP_SUMMARY
-      # - name: Create tag
-      #   uses: actions/github-script@v6
-      #   env:
-      #     TAG_NAME: v${{ steps.version.outputs.next }}
-      #   with:
-      #     script: |
-      #       const { TAG_NAME } = process.env
-      #       github.rest.git.createRef({
-      #         owner: context.repo.owner,
-      #         repo: context.repo.repo,
-      #         ref: `refs/tags/${TAG_NAME}`,
-      #         sha: context.sha
-      #       })
+      - name: Create tag
+        uses: actions/github-script@v6
+        env:
+          TAG_NAME: v${{ steps.version.outputs.next }}
+        with:
+          script: |
+            const { TAG_NAME } = process.env
+            github.rest.git.createRef({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              ref: `refs/tags/${TAG_NAME}`,
+              sha: context.sha
+            })
 
-  # build_and_release:
-  #   uses:
-  #     ./.github/workflows/release.yml
-  #   needs: tag_version
-  #   with:
-  #     version: ${{ needs.tag_version.outputs.version }}
-  #     tag: ${{ needs.tag_version.outputs.tag }}
-  #   secrets: inherit
+  build_and_release:
+    uses:
+      ./.github/workflows/release.yml
+    needs: tag_version
+    with:
+      version: ${{ needs.tag_version.outputs.version }}
+      tag: ${{ needs.tag_version.outputs.tag }}
+    secrets: inherit
 
