--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -94,9 +94,13 @@ jobs:
           name: build-artifacts
           path: dist/*
           retention-days: 1
+      - name: Upload to flypkgs
+        env:
+          FLYPKGS_API_TOKEN: ${{ secrets.FLYPKGS_API_TOKEN }}
+        run: go run ./tools/distribute upload ~/build-archive
 
   # upload:
-  #   needs: build
+  #   needs: release
   #   runs-on: ubuntu-latest
   #   steps:
   #     - uses: actions/checkout@v4
