cleanup ci-dev workflow, prevent race runs

--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -2,7 +2,12 @@ name: CI - Dev
 
 on:
   pull_request:
-  push:
+    types:
+      - opened
+      - synchronize
+      - reopened
+      - ready_for_review
+  # push:
   workflow_dispatch:
 
 concurrency:
@@ -23,9 +28,6 @@ jobs:
       version: ${{ steps.version.outputs.next }}
       tag: v${{ steps.version.outputs.next }}
     steps:
-      - run: echo "$GITHUB_CONTEXT"
-        env: 
-          GITHUB_CONTEXT: ${{ toJSON(github) }}
       - uses: actions/checkout@v4
         with:
           fetch-tags: true
