--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -19,6 +19,13 @@ jobs:
     uses:
       ./.github/workflows/test.yml
 
+  debug:
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo "$GITHUB_CONTEXT"
+        env: 
+          GITHUB_CONTEXT: ${{ toJSON(github) }}
+
   # create a dev tag for every branch except master
   tag_version:
     needs: test
