--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,20 +1,61 @@
 name: Build & Release
 
 on:
-  workflow_dispatch:
-  workflow_call:
-    inputs:
-      version:
-        description: Version number
-        required: true
-        type: string
-      tag:
-        description: Tag
-        required: true
-        type: string
+  push:
+    tags:
+      - v**
+
+  # workflow_dispatch:
+  # workflow_call:
+  #   inputs:
+  #     version:
+  #       description: Version number
+  #       required: true
+  #       type: string
+  #     tag:
+  #       description: Tag
+  #       required: true
+  #       type: string
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
+  meta:
+    runs-on: ubuntu-latest
+    outputs:
+      version: ${{ steps.gen.outputs.version }}
+      tag: ${{ steps.gen.outputs.tag }}
+      sha_short: ${{ steps.sha_short.outputs.sha_short }}
+      json: ${{ steps.gen.outputs.json }}
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          fetch-tags: true
+      - uses: actions/setup-go@v4
+        with:
+          go-version-file: "go.mod"
+      - shell: bash
+        id: sha_short
+        run: |
+          echo "sha_short=$(git rev-parse --short HEAD)" >> "$GITHUB_OUTPUT"
+      - name: Generate version meta
+        id: gen
+        run: |
+          go run ./tools/version show > ./dist/release.json
+          echo "json=$(cat ./dist/release.json)" >> "$GITHUB_OUTPUT"
+          echo "version=$(cat ./dist/release.json | jq -r .version)" >> "$GITHUB_OUTPUT"
+          echo "tag=$(cat ./dist/release.json | jq -r .tag)" >> "$GITHUB_OUTPUT"
+      - uses: actions/upload-artifact@v3
+        with:
+          name: build-artifacts
+          path: |
+            dist/release.json
+
   build:
+    needs: meta
     strategy:
       matrix:
         GOOS: [linux, windows, darwin]
@@ -28,14 +69,13 @@ jobs:
           go-version-file: "go.mod"
       - name: Place wintun.dll
         run: cp -r deps/wintun/bin/amd64/wintun.dll ./
-      - shell: bash
-        run: |
-          echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+      - name: Write release meta
+        run: echo "${{ needs.meta.outputs.json }}" > ./dist/release.json
       - id: cache
         uses: actions/cache@v3
         with:
           path: dist/${{ matrix.GOOS }}
-          key: ${{ matrix.GOOS }}-${{ env.sha_short }}
+          key: ${{ matrix.GOOS }}-${{ needs.meta.outputs.sha_short }}
       - name: Run GoReleaser
         if: steps.cache.outputs.cache-hit != 'true' # do not run if cache hit
         uses: goreleaser/goreleaser-action@v4
@@ -49,7 +89,7 @@ jobs:
 
   release:
     runs-on: ubuntu-latest
-    needs: build
+    needs: [meta, build]
     steps:
       - uses: actions/checkout@v4
         with:
@@ -57,32 +97,28 @@ jobs:
       - uses: actions/setup-go@v4
         with:
           go-version-file: "go.mod"
-      - shell: bash
-        run: |
-          echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
       # copy the caches from prepare
-      - shell: bash
-        run: |
-          echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
       - uses: actions/cache@v3
         with:
           path: dist/linux
-          key: linux-${{ env.sha_short }}
+          key: linux-${{ needs.meta.outputs.sha_short }}
       - uses: actions/cache@v3
         with:
           path: dist/darwin
-          key: darwin-${{ env.sha_short }}
+          key: darwin-${{ needs.meta.outputs.sha_short }}
       - uses: actions/cache@v3
         with:
           path: dist/windows
-          key: windows-${{ env.sha_short }}
+          key: windows-${{ needs.meta.outputs.sha_short }}
       - name: Write release meta
-        run: go run ./tools/version show > ./dist/release.json
-      - run: find ./dist
+        run: echo "${{ needs.meta.outputs.json }}" > ./dist/release.json
       - uses: actions/upload-artifact@v3
         with:
           name: build-artifacts
-          path: dist/*
+          path: |
+            dist/**/*.json
+            dist/**/*.zip
+            dist/**/*.tar.gz
           retention-days: 1
       - name: Upload to flypkgs
         env:
@@ -92,7 +128,7 @@ jobs:
   # preflight here once old and new workflows are merged
 
   publish:
-    needs: [release]
+    needs: [meta, release]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -102,4 +138,4 @@ jobs:
       - name: Upload to flypkgs
         env:
           FLYPKGS_API_TOKEN: ${{ secrets.FLYPKGS_API_TOKEN }}
-        run: go run ./tools/distribute publish ${{ inputs.version }}
+        run: go run ./tools/distribute publish ${{ needs.meta.outputs.version }}
