`deploy`: add "max_unavailable" to fly.toml

--- a/internal/appconfig/testdata/full-reference.toml
+++ b/internal/appconfig/testdata/full-reference.toml
@@ -35,6 +35,7 @@ host_dedication_id = "06031957"
 [deploy]
   release_command = "release command"
   strategy = "rolling-eyes"
+  max_unavailable = 0.2
 
 [env]
   FOO = "BAR"
