--- a/internal/appconfig/testdata/full-reference.toml
+++ b/internal/appconfig/testdata/full-reference.toml
@@ -128,7 +128,10 @@ host_dedication_id = "06031957"
   internal_port = 8081
   protocol = "tcp"
   processes = ["app"]
-
+  auto_start_machines = false
+  auto_stop_machines = false
+  min_machines_running = 1
+  
   [services.concurrency]
     type = "requests"
     hard_limit = 22
