--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -21,6 +21,7 @@ jobs:
 
   debug:
     runs-on: ubuntu-latest
+    if: runner.debug == '1'
     steps:
       - run: echo "$GITHUB_CONTEXT"
         env:
