--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -29,7 +29,7 @@ jobs:
       tag: v${{ steps.version.outputs.next }}
     steps:
       - name: Debug
-        if: runner.debug == "1"
+        if: runner.debug == '1'
         run: echo "$GITHUB_CONTEXT"
         env:
           GITHUB_CONTEXT: ${{ toJSON(github) }}
