add --skip-stopped option to fly deploy also add `deploy.skip_stopped` to fly.toml config.

--- a/internal/appconfig/testdata/full-reference.toml
+++ b/internal/appconfig/testdata/full-reference.toml
@@ -36,6 +36,7 @@ host_dedication_id = "06031957"
   release_command = "release command"
   strategy = "rolling-eyes"
   max_unavailable = 0.2
+  skip_stopped = false
 
 [env]
   FOO = "BAR"
