--- a/internal/appconfig/testdata/full-reference.toml
+++ b/internal/appconfig/testdata/full-reference.toml
@@ -40,10 +40,6 @@ host_dedication_id = "06031957"
 [env]
   FOO = "BAR"
 
-[[compute]]
-  gpu_kind = "a100-pcie-40gb"
-  processes = ["app"]
-
 [[metrics]]
   port = 9999
   path = "/metrics"
@@ -111,6 +107,14 @@ host_dedication_id = "06031957"
 [mounts]
   source = "data"
   destination = "/data"
+
+[[compute]]
+  cpu_kind = "performance"
+  cpus = 8
+  memory_mb = 8192
+  gpu_kind = "a100-pcie-40gb"
+  kernel_args = ["quiet"]
+  processes = ["app"]
 
 [processes]
   web = "run web"
