--- a/internal/appconfig/testdata/full-reference.toml
+++ b/internal/appconfig/testdata/full-reference.toml
@@ -41,7 +41,11 @@ host_dedication_id = "06031957"
   FOO = "BAR"
 
 [[compute]]
+  cpu_kind = "performance"
+  cpus = 8
+  memory_mb = 8192
   gpu_kind = "a100-pcie-40gb"
+  kernel_args = ["quiet"]
   processes = ["app"]
 
 [[metrics]]
