--- a/internal/appconfig/testdata/full-reference.toml
+++ b/internal/appconfig/testdata/full-reference.toml
@@ -109,8 +109,10 @@ host_dedication_id = "06031957"
   destination = "/data"
 
 [[compute]]
+  size = "shared-cpu-1x"
   cpu_kind = "performance"
   cpus = 8
+  memory = "8gb"
   memory_mb = 8192
   gpu_kind = "a100-pcie-40gb"
   kernel_args = ["quiet"]
