--- a/internal/appconfig/testdata/full-reference.toml
+++ b/internal/appconfig/testdata/full-reference.toml
@@ -108,6 +108,17 @@ host_dedication_id = "06031957"
   source = "data"
   destination = "/data"
 
+[[compute]]
+  size = "shared-cpu-1x"
+  cpu_kind = "performance"
+  cpus = 8
+  memory = "8gb"
+  memory_mb = 8192
+  gpu_kind = "a100-pcie-40gb"
+  kernel_args = ["quiet"]
+  host_dedication_id = "isolated-xxx"
+  processes = ["app"]
+
 [processes]
   web = "run web"
   task = "task all day"
