--- a/internal/appconfig/testdata/tomachine-compute.toml
+++ b/internal/appconfig/testdata/tomachine-compute.toml
@@ -7,15 +7,16 @@ whisper = "/whisperme"
 isolated = "/must-run-alone"
 
 # A section that applies to a specific group
-[[compute]]
+[[vm]]
 memory = "64gb"
 gpu_kind = "a100-pcie-40gb"
 processes = ["whisper"]
 
+# [[compute]] is an alias for [[vm]]
 [[compute]]
 host_dedication_id = "lookma-iamsolo"
 processes = ["isolated"]
 
 # A section without processes set must apply to all process groups
-[[compute]]
+[[vm]]
 size = "shared-cpu-2x"
