--- a/internal/appconfig/testdata/full-reference.toml
+++ b/internal/appconfig/testdata/full-reference.toml
@@ -115,6 +115,7 @@ host_dedication_id = "06031957"
   cpus = 8
   memory = "8gb"
   memory_mb = 8192
+  gpus = 2
   gpu_kind = "a100-pcie-40gb"
   kernel_args = ["quiet"]
   host_dedication_id = "isolated-xxx"
